[package]
name = "packet_builder"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A modular network packet builder library"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1.0"
bytes = "1.5"
