[package]
name = "packet_builder"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A modular network packet builder library"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1.0", features = ["full"] }
serde_bytes = "0.11"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
