[package]
name = "pktgen"
version = "0.1.2"
edition = "2024"
authors = ["ScharxiDev <scharxidev@outlook.de>"]
description = "A modular network packet builder library"
license = "MIT"
repository = "https://github.com/Scharxi/packet_builder"
documentation = "https://docs.rs/pktgen"
readme = "README.md"
keywords = ["network", "packet", "ethernet", "tcp", "udp"]
categories = ["network-programming", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1.0", features = ["full"] }
serde_bytes = "0.11"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
